[package]
name = "gem-node"
version = "0.1.0"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Experimental blockchain"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gemblockchain/gem-node"
repository = "https://github.com/gemblockchain/gem-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
