[package]
name = "gem-node"
version = "0.1.0"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Experimental blockchain"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gemblockchain/gem-node"
repository = "https://github.com/gemblockchain/gem-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gem"
path = "src/main.rs"

[dependencies]
# Async
async-std = { version = "1.12", features = ["attributes", "unstable"] }
async-trait = "0.1"

# Handling command line arguments
clap = { version = "4.1.6", features = ["derive"] }

# Logging
env_logger = "0.10.0"
log = "0.4.17"

# Error handling
anyhow = "1.0.69"

# JSON-RPC
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"

# Serialize and Deserialize
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.0"

# Cryptographic keys and their representation
base58 = "0.2.0"
blake2 = "0.10.6"
ed25519-dalek = "1.0.1"

# Wallet
argon2 = "0.5.0"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
rpassword = "7.2.0"

# Storing the state
rocksdb = "0.20.1"

# Network
libp2p = { version = "0.51.1", features = ["async-std", "gossipsub", "identify", "macros", "mdns", "mplex", "noise", "request-response", "tcp"] }

# Proof-of-work
randomx-rs = { git = "https://github.com/tari-project/randomx-rs", tag = "v1.1.14" }

# Other
rand = "0.7"
uint = "0.9.5"
